--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,4 +1,4 @@
-.container {
+/* .container {
   padding: 0 2rem;
 }
 
@@ -112,5 +112,5 @@
   .grid {
     width: 100%;
     flex-direction: column;
-  }
-}
+  } */
+/* } */
